Updated demo content.

--- a/ProgressiveJS.com/Views/Web.config
+++ b/ProgressiveJS.com/Views/Web.config
@@ -17,9 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="ProgressiveJS.Client"/>
+        <add namespace="ProgressiveJS.UX"/>
 
         <add namespace="ProgressiveJS.com" />
+        <add namespace="ProgressiveJS.com.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
